--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>VideoPulse - Video Chat Platform</title>
+    <style>
+      body {
+        background-color: #0C1844;
+        color: #FFF5E1;
+        font-family: 'Inter', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
