--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VideoPulse - Video Chat Platform</title>
+    <title>Focal Point</title>
     <style>
       body {
         background-color: #0C1844;
