--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focal Point</title>
-    <style>
-      body {
-        background-color: #0C1844;
-        color: #FFF5E1;
-        font-family: 'Inter', sans-serif;
-      }
-    </style>
   </head>
   <body>
     <div id="root"></div>
